--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"name": "gulp-mocka-browserify-sample",
 	"author": "Kestutis Baltronas",
+
 	"devDependencies": {
+		"angular": "^1.3.15",
 		"chai": "^2.2.0",
 		"gulp": "^3.8.11",
 		"gulp-browserify": "^0.5.1",
